fix sequencer__display on safari, now fix pad sizing

--- a/styles.css
+++ b/styles.css
@@ -320,10 +320,8 @@ ul.drum-machine__pads li button:active,
   display: contents;
 }
 .sequencer__display {
-  display: flex;
-  display: -webkit-flex;
+  display: grid;
   flex-direction: column;
-  -webkit-flex-direction: column;
   max-height: 100%;
   min-height: 100%;
   width: 100%;
@@ -377,7 +375,6 @@ ul.drum-machine__pads li button:active,
 }
 
 .sequencer__display__track__effects-panel__controls {
-  height: 70%;
   display: grid;
   grid-template-columns: 5% repeat(3, 1fr);
   grid-template-rows: 0.5fr 1fr;
@@ -520,7 +517,7 @@ ul.drum-machine__pads li button:active,
     height: 100%;
     max-height: 100vh;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
 
     overflow: hidden;
     border: none;
@@ -528,7 +525,7 @@ ul.drum-machine__pads li button:active,
     display: grid;
     background-color: #e8e8e8;
     grid-template-columns: 0.4fr 0.6fr;
-    grid-template-rows: 0.5fr 1.5fr 2.5fr;
+    grid-template-rows: 0.5fr 1.5fr 3fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
   }
@@ -545,7 +542,7 @@ ul.drum-machine__pads li button:active,
 
   .drum-machine__screen {
     height: 90%;
-    min-height: 4vw;
+    min-height: 6vw;
     margin-bottom: 10%;
     border-radius: 9px 0.2rem 0.3rem;
     align-self: flex-start;
@@ -659,12 +656,11 @@ ul.drum-machine__pads li button:active,
 
   .sequencer__display {
     min-height: 93%;
-    max-height: 100%;
+    max-height: 97%;
     background: black;
-    overflow-y: auto;
-    height: 92%;
-    margin-top: 5%;
-    margin-bottom: 1%;
+    overflow-y: none;
+    height: 95%;
+    margin-top: 4%;
     display: grid;
     border-radius: 4px 4px 9px 9px;
     grid-area: 3 / 1 / 4 / 3;
